overc: make meta-yocto-bsp dependency explicit, and drop poky references
To ensure that we really do build against just oe-core, we can drop the
poky sanity class, and reference meta-yocto-bsp in the layer dependencies.

Signed-off-by: Bruce Ashfield <bruce.ashfield@windriver.com>

--- a/README
+++ b/README
@@ -18,6 +18,12 @@ branch: master
 revision: HEAD
 prio: default
 
+URI: git://git.pokylinux.org/poky
+branch: master
+revision: HEAD
+layers: meta-yocto-bsp
+prio: default
+
 URI: git://github.com/openembedded/meta-oe.git
 branch: master
 revision: HEAD
