--- a/README
+++ b/README
@@ -34,7 +34,11 @@ layers: meta-oe
         meta-gnome
         meta-xfce
         meta-multimedia
-        meta-virtualization
+
+URI: git://git.yoctoproject.org/meta-virtualization
+branch: master
+revision: HEAD
+prio: default
 
 URI: git://github.com/OSSystems/meta-browser.git
 branch: master
