README: clarify the need for both meta-overc and meta-cube
Signed-off-by: Bruce Ashfield <bruce.ashfield@windriver.com>

--- a/README
+++ b/README
@@ -1,13 +1,16 @@
 meta-overc/meta-cube
 ===================
 
-The goal of this layer is to create a yocto build which can be deployed on a
+The goal of these layers is to create a yocto build which can be deployed on a
 modern server to provide a useable environment which in turn can build yocto
 (and indeed the variant from this layer itself).  A lot of the heavy lifting
 to achieve this has been done by the build-appliance image type of yocto, but
 that is limited to virtual deployment, and does not have all the development
 tools and/or man pages and things like tab completion that make a system
 "useable".  This layer attempts to close that gap.
+
+Both meta-overc, and meta-overc/meta-cube should be added to your bblayers
+file.
 
 Dependencies
 ------------
