cube-*: add puppet to all OverC images
The puppet will be used in masterless mode to complete configuration
of the images during installation and eventually to ensure persistent
configurations remain after completing system upgrades.

This requires that meta-cloud-services is added to the list of
required layers. Documentation, sample configs etc. have been updated
to reflect this.

Signed-off-by: Mark Asselstine <mark.asselstine@windriver.com>
Signed-off-by: Bruce Ashfield <bruce.ashfield@windriver.com>

--- a/README
+++ b/README
@@ -48,6 +48,11 @@ branch: master
 revision: HEAD
 prio: default
 
+URI: git://git.yoctoproject.org/meta-cloud-services
+branch: master
+revision: HEAD
+prio: default
+
 Maintenance
 -----------
 
