README: Added missing URI for layer dependencies
Signed-off-by: Arnold German <Arnold.German@windriver.com>
Signed-off-by: Bruce Ashfield <bruce.ashfield@windriver.com>

--- a/README
+++ b/README
@@ -53,6 +53,16 @@ branch: master
 revision: HEAD
 prio: default
 
+URI: git://git.yoctoproject.org/meta-qt4
+branch: master
+revision: HEAD
+prio: default
+
+URI: git://github.com/errordeveloper/oe-meta-go.git
+branch: master
+revision: HEAD
+prio: default
+
 Maintenance
 -----------
 
