maintainers: update email addresses
Signed-off-by: Bruce Ashfield <bruce.ashfield@gmail.com>

--- a/README
+++ b/README
@@ -62,7 +62,7 @@ prio: default
 Maintenance
 -----------
 
-Send pull requests, patches, comments or questions to bruce.ashfield@windriver.com
+Send pull requests, patches, comments or questions to bruce.ashfield@gmail.com
 
 Maintainers: Bruce Ashfield <bruce.ashfield@gmail.com>
 
