README: document meta-selinux requirement
Signed-off-by: Bruce Ashfield <bruce.ashfield@gmail.com>

--- a/README
+++ b/README
@@ -59,6 +59,11 @@ branch: master
 revision: HEAD
 prio: default
 
+URI: git://git.yoctoproject.org/meta-selinux
+branch: master
+revision: HEAD
+prio: default
+
 Maintenance
 -----------
 
